samples/_failures_safe/1761044085_266f1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e68f5fc.c: In function ‘main’:
./samples/SAFE/__tmp_7e68f5fc.c:121:12: error: missing terminating " character
  121 |     printf("\
      |            ^~
./samples/SAFE/__tmp_7e68f5fc.c:121:5: error: expected expression at end of input
  121 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_7e68f5fc.c:121:5: error: expected declaration or statement at end of input
